# kukfin

./: .env.example  KUKLABS_IDENTITY.md  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml
apps/web/: Dockerfile  next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/register/: page.tsx
apps/web/lib/: api.ts
docs/: ARCHITECTURE.md  ROADMAP.md
services/api/: Dockerfile  alembic.ini  pyproject.toml
services/api/app/: __init__.py  dependencies.py  main.py  models.py  schemas.py  security.py
services/api/app/core/: config.py
services/api/app/routers/: auth.py  portfolios.py  watchlists.py
services/api/migrations/: env.py
services/api/migrations/versions/: 20260713_0001_initial_tenant_schema.py
services/api/tests/: test_api.py
